GPS dependcy on DDP

--- a/tutorials/GPS/libGPS/CMakeLists.txt
+++ b/tutorials/GPS/libGPS/CMakeLists.txt
@@ -1,5 +1,5 @@
 aux_source_directory( . DIR_LIBGPS_SRCS )
 
-link_directories( dart )
+link_directories( DDP dart )
 
 add_library( GPS ${DIR_LIBGPS_SRCS})
