--- a/tutorials/GPS/libGPS/CMakeLists.txt
+++ b/tutorials/GPS/libGPS/CMakeLists.txt
@@ -1,4 +1,7 @@
-aux_source_directory( . DIR_LIBGPS_SRCS )
+file(GLOB DIR_LIBGPS_CPP "*.cpp")
+file(GLOB DIR_LIBGPS_HPP "*.h")
+list( APPEND DIR_LIBGPS_SRCS ${DIR_LIBGPS_CPP} ${DIR_LIBGPS_HPP})
+#aux_source_directory( . DIR_LIBGPS_SRCS )
 
 link_libraries( DDP dart )
 
