build pipeline to run python in c++

--- a/tutorials/GPS/CMakeLists.txt
+++ b/tutorials/GPS/CMakeLists.txt
@@ -2,6 +2,9 @@ add_subdirectory( libGPS  )
 aux_source_directory( CartPole DIR_AGENT_SRCS )
 aux_source_directory( GUI DIR_GUI_SRCS )
 
+find_package(PythonLibs REQUIRED)
+# message(${PYTHON_INCLUDE_DIRS})
+include_directories(${PYTHON_INCLUDE_DIRS})
 
 add_executable( main main.cpp ${DIR_AGENT_SRCS} ${DIR_GUI_SRCS})
-target_link_libraries( main GPS DDP dart)
+target_link_libraries( main GPS DDP dart ${PYTHON_LIBRARIES})
