--- a/apps/rigidBodies/CMakeLists.txt
+++ b/apps/rigidBodies/CMakeLists.txt
@@ -6,5 +6,5 @@ file(GLOB rigidBodies_srcs "*.cpp")
 file(GLOB rigidBodies_hdrs "*.h")
 include_directories(../../src/dynamics)
 add_executable(rigidBodies ${rigidBodies_srcs} ${rigidBodies_hdrs})
-target_link_libraries(rigidBodies dart ${DARTExt_LIBRARIES})
+target_link_libraries(rigidBodies dart-optimizer-ipopt dart-optimizer-nlopt dart ${DARTExt_LIBRARIES})
 set_target_properties(rigidBodies PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
