test with myLemke

--- a/apps/CntctLrnin/CMakeLists.txt
+++ b/apps/CntctLrnin/CMakeLists.txt
@@ -2,6 +2,8 @@
 # apps/CntctLrnin
 file(GLOB CntctLrnin_srcs "*.cpp")
 file(GLOB CntctLrnin_hdrs "*.h")
-add_executable(CntctLrnin ${CntctLrnin_srcs} ${CntctLrnin_hdrs})
+file(GLOB MyLemke_srcs "../Lemke_Fix/MyLemke.cpp")
+file(GLOB MyLemke_hdrs "../Lemke_Fix/MyLemke.h")
+add_executable(CntctLrnin ${CntctLrnin_srcs} ${CntctLrnin_hdrs} ${MyLemke_hdrs} ${MyLemke_srcs})
 target_link_libraries(CntctLrnin dart)
 set_target_properties(CntctLrnin PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
