--- a/apps/snopt_lcp/CMakeLists.txt
+++ b/apps/snopt_lcp/CMakeLists.txt
@@ -2,9 +2,12 @@
 # apps/snopt_interface
 file(GLOB snoptlcp_srcs "*.cpp")
 file(GLOB snoptlcp_hdrs "*.hpp")
-set(SNOPT ${CMAKE_SOURCE_DIR}/snopt)
-include_directories(${SNOPT}/include)
-link_directories(${SNOPT}/lib)
+
+set(SNOPTF2C ${CMAKE_SOURCE_DIR}/snoptf2c)
+set(SNOPTLCP ${CMAKE_SOURCE_DIR}/apps/QPCC)
+# include_directories(${SNOPTF2C})
+link_directories(${SNOPTF2C} ${SNOPTLCP})
+
 add_executable(snoptlcp ${snoptlcp_srcs} ${snoptlcp_hdrs})
-target_link_libraries(snoptlcp dart snopt7_cpp snopt7)
+target_link_libraries(snoptlcp dart SNOPTLCP snopt_c snprint_c blas_c f2c)
 set_target_properties(snoptlcp PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
