--- a/apps/QPCC/CMakeLists.txt
+++ b/apps/QPCC/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(QPCC ${QPCC_srcs} ${QPCC_hdrs})
 target_link_libraries(QPCC dart snopt_c snprint_c blas_c f2c)
 set_target_properties(QPCC PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
+# Here link_libraries should precede add_library
 link_libraries(dart snopt_c snprint_c blas_c f2c)
 add_library(SNOPTLCP ${SNOPTLCP_SRCS})
 
