--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -46,6 +46,7 @@ macro(list_contains var value)
 endmacro(list_contains)
 
 # Include and link to gtest
+link_directories(${CMAKE_BINARY_DIR}/apps/CntctLrnin ${CMAKE_SOURCE_DIR}/snoptf2c)
 include_directories(${CMAKE_SOURCE_DIR}/unittests/gtest/include)
 include_directories(${CMAKE_SOURCE_DIR}/unittests/gtest)
 add_library(gtest STATIC gtest/src/gtest-all.cc)
@@ -67,9 +68,9 @@ foreach(test ${tests})
   link_directories(${DARTExt_LIBRARY_DIRS})
   add_executable(${base} ${test})
   if(MSVC)
-    target_link_libraries(${base} dart optimized gtest debug gtestd)
+    target_link_libraries(${base} dart optimized gtest debug gtestd CntctLrninAPI)
   else()
-    target_link_libraries(${base} dart gtest)
+    target_link_libraries(${base} dart gtest CntctLrninAPI)
   endif()
 
   set_target_properties(${base} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/tests")
