Revert "Link CntctLrninAPI to unit test"
This reverts commit bd3c616766239b9dd2aa63dea0ad77bd8c788629.


Former-commit-id: 69d2ea8803b33c4c28fdaee87fa34b09a733a06a

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -46,7 +46,6 @@ macro(list_contains var value)
 endmacro(list_contains)
 
 # Include and link to gtest
-link_directories(${CMAKE_BINARY_DIR}/apps/CntctLrnin ${CMAKE_SOURCE_DIR}/snoptf2c)
 include_directories(${CMAKE_SOURCE_DIR}/unittests/gtest/include)
 include_directories(${CMAKE_SOURCE_DIR}/unittests/gtest)
 add_library(gtest STATIC gtest/src/gtest-all.cc)
@@ -68,9 +67,9 @@ foreach(test ${tests})
   link_directories(${DARTExt_LIBRARY_DIRS})
   add_executable(${base} ${test})
   if(MSVC)
-    target_link_libraries(${base} dart optimized gtest debug gtestd CntctLrninAPI)
+    target_link_libraries(${base} dart optimized gtest debug gtestd)
   else()
-    target_link_libraries(${base} dart gtest CntctLrninAPI)
+    target_link_libraries(${base} dart gtest)
   endif()
 
   set_target_properties(${base} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/tests")
