--- a/apps/bipedStand/CMakeLists.txt
+++ b/apps/bipedStand/CMakeLists.txt
@@ -2,6 +2,7 @@
 # apps/bipedStand
 file(GLOB bipedStand_srcs "*.cpp")
 file(GLOB bipedStand_hdrs "*.h")
+link_directories(${CMAKE_SOURCE_DIR}/snoptf2c)
 add_executable(bipedStand ${bipedStand_srcs} ${bipedStand_hdrs})
 target_link_libraries(bipedStand CntctLrninAPI dart)
 set_target_properties(bipedStand PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
