snopt library clean up
Former-commit-id: f0fadf89687cdc5e5cfed811e1d7aea8c51df635

--- a/apps/CntctLrnin/CMakeLists.txt
+++ b/apps/CntctLrnin/CMakeLists.txt
@@ -5,7 +5,7 @@ file(GLOB CntctLrnin_hdrs "*.h")
 file(GLOB MyLemke_srcs "../Lemke_Fix/MyLemke.cpp")
 file(GLOB MyLemke_hdrs "../Lemke_Fix/MyLemke.h")
 
-set(SNOPTF2C ${CMAKE_SOURCE_DIR}/snoptf2c)
+set(SNOPTF2C ${CMAKE_SOURCE_DIR}/snopt72)
 set(SNOPTLCP ${CMAKE_SOURCE_DIR}/apps/QPCC)
 link_directories(${SNOPTF2C} ${SNOPTLCP})
 
