--- a/apps/CntctLrnin/CMakeLists.txt
+++ b/apps/CntctLrnin/CMakeLists.txt
@@ -5,9 +5,8 @@ file(GLOB CntctLrnin_hdrs "*.h")
 file(GLOB MyLemke_srcs "../Lemke_Fix/MyLemke.cpp")
 file(GLOB MyLemke_hdrs "../Lemke_Fix/MyLemke.h")
 
-set(SNOPTF2C ${CMAKE_SOURCE_DIR}/snopt72)
 set(SNOPTLCP ${CMAKE_SOURCE_DIR}/apps/QPCC)
-link_directories(${SNOPTF2C} ${SNOPTLCP})
+link_directories(${SNOPTLCP})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wno-deprecated-declarations")
 add_executable(CntctLrnin ${CntctLrnin_srcs} ${CntctLrnin_hdrs} ${MyLemke_hdrs} ${MyLemke_srcs})
