first commit of caffe, integrate NN into CntctLrnin project
Former-commit-id: 41e2ca7cdd5a61f217ba192c463b00cd372cd3da

--- a/apps/CntctLrnin/CMakeLists.txt
+++ b/apps/CntctLrnin/CMakeLists.txt
@@ -1,5 +1,30 @@
 ###############################################
 # apps/CntctLrnin
+
+# opencv library
+find_package(OpenCV)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+# caffe library
+find_package(Caffe)
+# set(Caffe_DIR /Users/Yang/Material/Research/caffe/build)
+message(STATUS "Caffe root path")
+message(STATUS ${Caffe_DIR})
+
+message(STATUS "Caffe_DEFINITIONS")
+message(STATUS ${Caffe_DEFINITIONS})
+
+message(STATUS "Caffe_INCLUDE_DIRS")
+message(STATUS ${Caffe_INCLUDE_DIRS})
+
+message(STATUS "Caffe_LIBRARIES")
+message(STATUS ${Caffe_LIBRARIES})
+
+add_definitions(${Caffe_DEFINITIONS})    # ex. -DCPU_ONLY
+include_directories(${Caffe_INCLUDE_DIRS})
+
+# original cmake
+
 file(GLOB CntctLrnin_srcs "*.cpp")
 file(GLOB CntctLrnin_hdrs "*.h")
 file(GLOB MyLemke_srcs "../lemkeFix/myLemke.cpp")
@@ -15,5 +40,5 @@ link_libraries(SNOPTLCP dart snopt_c snprint_c blas_c f2c)
 add_library(CntctLrninAPI STATIC ${CntctLrnin_srcs} ${CntctLrnin_hdrs} ${MyLemke_hdrs} ${MyLemke_srcs})
 
 add_executable(CntctLrnin ${MAIN_CPP})
-target_link_libraries(CntctLrnin CntctLrninAPI SNOPTLCP dart snopt_c snprint_c blas_c f2c)
+target_link_libraries(CntctLrnin CntctLrninAPI SNOPTLCP dart snopt_c snprint_c blas_c f2c ${Caffe_LIBRARIES} ${OpenCV_LIBS})
 set_target_properties(CntctLrnin PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
