Using Json to incorporate preprocessing data
Former-commit-id: 05d18155709daa164b34f17f0bfaa6462c63a541

--- a/apps/CntctLrnin/CMakeLists.txt
+++ b/apps/CntctLrnin/CMakeLists.txt
@@ -1,6 +1,11 @@
 ###############################################
 # apps/CntctLrnin
 
+# jsoncpp library
+file(GLOB_RECURSE dist_json_srcs "dist-json/*.*")
+message(STATUS "json src")
+message(STATUS ${dist_json_srcs})
+
 # opencv library
 find_package(OpenCV)
 include_directories(${OpenCV_INCLUDE_DIRS})
@@ -37,7 +42,7 @@ link_directories(${SNOPTLCP})
 file(GLOB MAIN_CPP "Main.cpp")
 list (REMOVE_ITEM CntctLrnin_srcs ${MAIN_CPP})
 link_libraries(SNOPTLCP dart snopt_c snprint_c blas_c f2c)
-add_library(CntctLrninAPI STATIC ${CntctLrnin_srcs} ${CntctLrnin_hdrs} ${MyLemke_hdrs} ${MyLemke_srcs})
+add_library(CntctLrninAPI STATIC ${CntctLrnin_srcs} ${CntctLrnin_hdrs} ${MyLemke_hdrs} ${MyLemke_srcs} ${dist_json_srcs})
 
 add_executable(CntctLrnin ${MAIN_CPP})
 target_link_libraries(CntctLrnin CntctLrninAPI SNOPTLCP dart snopt_c snprint_c blas_c f2c ${Caffe_LIBRARIES} ${OpenCV_LIBS})
