Finish caffe unit test in main.cpp
Former-commit-id: b86da527b4a0fded0dfc3750a484b765469e0aaf

--- a/apps/CntctLrnin/CMakeLists.txt
+++ b/apps/CntctLrnin/CMakeLists.txt
@@ -6,9 +6,9 @@ file(GLOB_RECURSE dist_json_srcs "dist-json/*.*")
 message(STATUS "json src")
 message(STATUS ${dist_json_srcs})
 
-# opencv library
-find_package(OpenCV)
-include_directories(${OpenCV_INCLUDE_DIRS})
+# # opencv library
+# find_package(OpenCV)
+# include_directories(${OpenCV_INCLUDE_DIRS})
 
 # caffe library
 find_package(Caffe)
@@ -45,5 +45,5 @@ link_libraries(SNOPTLCP dart snopt_c snprint_c blas_c f2c)
 add_library(CntctLrninAPI STATIC ${CntctLrnin_srcs} ${CntctLrnin_hdrs} ${MyLemke_hdrs} ${MyLemke_srcs} ${dist_json_srcs})
 
 add_executable(CntctLrnin ${MAIN_CPP})
-target_link_libraries(CntctLrnin CntctLrninAPI SNOPTLCP dart snopt_c snprint_c blas_c f2c ${Caffe_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(CntctLrnin CntctLrninAPI SNOPTLCP dart snopt_c snprint_c blas_c f2c ${Caffe_LIBRARIES})
 set_target_properties(CntctLrnin PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
