--- a/apps/QPCC/CMakeLists.txt
+++ b/apps/QPCC/CMakeLists.txt
@@ -1,6 +1,10 @@
 ###############################################
 # apps/QPCC
 #LINK_DIRECTORIES(/usr/local/Cellar/gfortran/4.8.2/gfortran/lib)
+# glog library
+find_package (Glog REQUIRED)
+include_directories (${GLOG_INCLUDE_DIR})
+
 file(GLOB QPCC_srcs "*.cpp")
 file(GLOB QPCC_hdrs "*.h")
 
@@ -10,10 +14,10 @@ list (REMOVE_ITEM SNOPTLCP_SRCS ${MAIN_CPP})
 # message("${SNOPTLCP_SRCS}")
 
 add_executable(QPCC ${QPCC_srcs} ${QPCC_hdrs})
-target_link_libraries(QPCC dart snopt_c snprint_c blas_c f2c)
+target_link_libraries(QPCC dart snopt_c snprint_c blas_c f2c glog)
 set_target_properties(QPCC PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
 # Here link_libraries should precede add_library
-link_libraries(dart snopt_c snprint_c blas_c f2c)
+link_libraries(dart snopt_c snprint_c blas_c f2c glog)
 add_library(SNOPTLCP STATIC ${SNOPTLCP_SRCS})
 
